@@ -7,7 +7,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.persistence.EntityManager;
 import jakarta.transaction.Transactional;
 import org.apache.commons.lang3.time.DateUtils;
@@ -19,6 +18,7 @@ import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMock
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.Import;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
@@ -74,35 +74,46 @@ import static org.mockito.Mockito.when;
 public class StatsServiceTests {
 
     @Autowired
-    BasicInstanceBuilder builder;
+    private EntityManager entityManager;
+
     @Autowired
-    EntityManager entityManager;
+    private BasicInstanceBuilder builder;
+
     @Autowired
-    StatsService statsService;
+    private StatsService statsService;
+
     @Autowired
-    ImageConsultationService imageConsultationService;
+    private ImageConsultationService imageConsultationService;
+
     @Autowired
-    ProjectConnectionService projectConnectionService;
+    private ProjectConnectionService projectConnectionService;
+
     @Autowired
-    PersistentConnectionRepository persistentConnectionRepository;
+    private PersistentConnectionRepository persistentConnectionRepository;
+
     @Autowired
-    LastConnectionRepository lastConnectionRepository;
+    private LastConnectionRepository lastConnectionRepository;
+
     @Autowired
-    PersistentImageConsultationRepository persistentImageConsultationRepository;
+    private PersistentImageConsultationRepository persistentImageConsultationRepository;
+
     @Autowired
-    PersistentProjectConnectionRepository persistentProjectConnectionRepository;
+    private PersistentProjectConnectionRepository persistentProjectConnectionRepository;
+
     @Autowired
-    ProjectConnectionRepository projectConnectionRepository;
+    private ProjectConnectionRepository projectConnectionRepository;
+
     @Autowired
-    PersistentUserPositionRepository persistentUserPositionRepository;
+    private PersistentUserPositionRepository persistentUserPositionRepository;
+
     @Autowired
-    LastUserPositionRepository lastUserPositionRepository;
+    private LastUserPositionRepository lastUserPositionRepository;
+
     @Autowired
-    AnnotationActionService annotationActionService;
-    @Autowired
-    ObjectMapper objectMapper;
+    private AnnotationActionService annotationActionService;
+
     @MockitoBean
-    StatsHttpContract statsHttpContract;
+    private StatsHttpContract statsHttpContract;
 
     @BeforeEach
     public void init() {
@@ -119,13 +130,20 @@ public class StatsServiceTests {
         return projectConnectionService.add(user, project, "xxx", "linux", "chrome", "123", created);
     }
 
-    PersistentImageConsultation givenAPersistentImageConsultation(User user, ImageInstance imageInstance,
-                                                                  Date created) {
+    PersistentImageConsultation givenAPersistentImageConsultation(
+        User user,
+        ImageInstance imageInstance,
+        Date created
+    ) {
         return imageConsultationService.add(user, imageInstance.getId(), "xxx", "mode", created);
     }
 
-    AnnotationAction givenAPersistentAnnotationAction(Date creation, AnnotationDomain annotationDomain, User user,
-                                                      String action) {
+    AnnotationAction givenAPersistentAnnotationAction(
+        Date creation,
+        AnnotationDomain annotationDomain,
+        User user,
+        String action
+    ) {
         return annotationActionService.add(annotationDomain, user, action, creation);
     }
 
@@ -161,14 +179,14 @@ public class StatsServiceTests {
         AnnotationTerm annotationTerm = builder.givenAnAnnotationTerm(builder.givenAUserAnnotation(project));
         entityManager.refresh(annotationTerm.getUserAnnotation());
 
-        List<JsonObject> jsonObjects = statsService.statAnnotationTermedByProject(annotationTerm.getTerm().getId(),
-            annotationTerm.getTerm().getOntology().getId());
+        List<JsonObject> jsonObjects = statsService.statAnnotationTermedByProject(
+            annotationTerm.getTerm().getId(),
+            annotationTerm.getTerm().getOntology().getId()
+        );
         assertThat(jsonObjects).hasSize(1);
-        assertThat(jsonObjects.get(0).get("username")).isEqualTo(project.getName());
-        assertThat(jsonObjects.get(0).get("value")).isEqualTo(1L);
-
+        assertThat(jsonObjects.getFirst().get("username")).isEqualTo(project.getName());
+        assertThat(jsonObjects.getFirst().get("value")).isEqualTo(1L);
     }
-
 
     @Test
     void statsUserAnnotationEvolution() {
@@ -180,17 +198,30 @@ public class StatsServiceTests {
         annotation2.setCreated(DateUtils.addDays(new Date(), -10));
         builder.persistAndReturn(annotation2);
 
-        List<JsonObject> jsonObjects =
-            statsService.statAnnotationEvolution(project, Optional.empty(), 7, DateUtils.addDays(new Date(), -30),
-                DateUtils.addDays(new Date(), 0), true, false);
+        List<JsonObject> jsonObjects = statsService.statAnnotationEvolution(
+            project,
+            Optional.empty(),
+            7,
+            DateUtils.addDays(new Date(), -30),
+            DateUtils.addDays(new Date(), 0),
+            true,
+            false
+        );
 
         assertThat(jsonObjects).hasSize(5);
-        assertThat(
-            jsonObjects.stream().filter(x -> x.getJSONAttrLong("size") == 1).collect(Collectors.toList())).hasSize(2);
+        assertThat(jsonObjects.stream()
+            .filter(x -> x.getJSONAttrLong("size") == 1)
+            .collect(Collectors.toList())).hasSize(2);
 
-        statsService.statAnnotationEvolution(project, Optional.of(builder.givenATerm(project.getOntology()).getId()), 7,
-            DateUtils.addDays(new Date(), -30), DateUtils.addDays(new Date(), 0), true, false);
-
+        statsService.statAnnotationEvolution(
+            project,
+            Optional.of(builder.givenATerm(project.getOntology()).getId()),
+            7,
+            DateUtils.addDays(new Date(), -30),
+            DateUtils.addDays(new Date(), 0),
+            true,
+            false
+        );
     }
 
     @Test
@@ -203,32 +234,42 @@ public class StatsServiceTests {
         annotation2.setCreated(DateUtils.addDays(new Date(), -10));
         builder.persistAndReturn(annotation2);
 
-        List<JsonObject> jsonObjects =
-            statsService.statReviewedAnnotationEvolution(project, Optional.empty(), 7,
-                DateUtils.addDays(new Date(), -30),
-                DateUtils.addDays(new Date(), 0), true, false);
+        List<JsonObject> jsonObjects = statsService.statReviewedAnnotationEvolution(
+            project,
+            Optional.empty(),
+            7,
+            DateUtils.addDays(new Date(), -30),
+            DateUtils.addDays(new Date(), 0),
+            true,
+            false
+        );
 
         assertThat(jsonObjects).hasSize(5);
-        assertThat(
-            jsonObjects.stream().filter(x -> x.getJSONAttrLong("size") == 1).collect(Collectors.toList())).hasSize(2);
+        assertThat(jsonObjects.stream()
+            .filter(x -> x.getJSONAttrLong("size") == 1)
+            .collect(Collectors.toList())).hasSize(2);
 
-        statsService.statReviewedAnnotationEvolution(project,
-            Optional.of(builder.givenATerm(project.getOntology()).getId()), 7,
-            DateUtils.addDays(new Date(), -30), DateUtils.addDays(new Date(), 0), true, false);
-
-
+        statsService.statReviewedAnnotationEvolution(
+            project,
+            Optional.of(builder.givenATerm(project.getOntology()).getId()),
+            7,
+            DateUtils.addDays(new Date(), -30),
+            DateUtils.addDays(new Date(), 0),
+            true,
+            false
+        );
     }
 
     @Test
-    void statsUderSlide() {
+    void statsUserSlide() {
         Project project = builder.givenAProject();
         builder.addUserToProject(project, "superadmin");
 
         List<JsonObject> results = statsService.statUserSlide(project, null, null);
 
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).getId()).isEqualTo(builder.givenSuperAdmin().getId());
-        assertThat(results.get(0).get("value")).isEqualTo(0);
+        assertThat(results.getFirst().getId()).isEqualTo(builder.givenSuperAdmin().getId());
+        assertThat(results.getFirst().get("value")).isEqualTo(0);
 
         UserAnnotation annotation1 = builder.givenAUserAnnotation(project);
         annotation1.setCreated(DateUtils.addDays(new Date(), -1));
@@ -240,8 +281,8 @@ public class StatsServiceTests {
         results = statsService.statUserSlide(project, null, null);
 
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).getId()).isEqualTo(builder.givenSuperAdmin().getId());
-        assertThat(results.get(0).get("value")).isEqualTo(2L);
+        assertThat(results.getFirst().getId()).isEqualTo(builder.givenSuperAdmin().getId());
+        assertThat(results.getFirst().get("value")).isEqualTo(2L);
 
         builder.addUserToProject(project, builder.givenAUser().getUsername());
 
@@ -249,8 +290,11 @@ public class StatsServiceTests {
 
         assertThat(results).hasSize(2);
 
-        results =
-            statsService.statUserSlide(project, DateUtils.addDays(new Date(), -40), DateUtils.addDays(new Date(), -20));
+        results = statsService.statUserSlide(
+            project,
+            DateUtils.addDays(new Date(), -40),
+            DateUtils.addDays(new Date(), -20)
+        );
 
         assertThat(results).hasSize(2);
         assertThat(results.get(0).get("value")).isEqualTo(0);
@@ -264,67 +308,92 @@ public class StatsServiceTests {
         long ontologyId = project.getOntology().getId();
         long userId = builder.givenSuperAdmin().getId();
 
-        when(statsHttpContract.findTermsByProject(ontologyId, userId, Optional.empty(), Optional.empty(), 0, 20))
-            .thenReturn(new PageImpl<>(List.of()));
+        when(statsHttpContract.findTermsByProject(
+            ontologyId,
+            userId,
+            Optional.empty(),
+            Optional.empty(),
+            Pageable.unpaged()
+        )).thenReturn(new PageImpl<>(List.of()));
         List<StatTerm> results = statsService.statTermSlide(project, Optional.empty(), Optional.empty());
-        results.removeIf(x -> x.id() == 0);
         assertThat(results).hasSize(0);
 
         Term term = builder.givenATerm(project.getOntology());
 
-        when(statsHttpContract.findTermsByProject(ontologyId, userId, Optional.empty(), Optional.empty(), 0, 20))
-            .thenReturn(new PageImpl<>(List.of(new StatTerm(term.getId(), term.getName(), term.getColor(), 0))));
+        when(statsHttpContract.findTermsByProject(
+            ontologyId,
+            userId,
+            Optional.empty(),
+            Optional.empty(),
+            Pageable.unpaged()
+        )).thenReturn(new PageImpl<>(List.of(new StatTerm(term.getId(), term.getName(), term.getColor(), 0))));
         results = statsService.statTermSlide(project, Optional.empty(), Optional.empty());
-        results.removeIf(x -> x.id() == 0);
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).id()).isEqualTo(term.getId());
-        assertThat(results.get(0).count()).isEqualTo(0);
+        assertThat(results.getFirst().id()).isEqualTo(term.getId());
+        assertThat(results.getFirst().count()).isEqualTo(0);
 
         UserAnnotation annotation1 = builder.givenAUserAnnotation(project);
         annotation1.setCreated(DateUtils.addDays(new Date(), -1));
         builder.givenAnAnnotationTerm(annotation1, term);
         builder.persistAndReturn(annotation1);
 
-        when(statsHttpContract.findTermsByProject(ontologyId, userId, Optional.empty(), Optional.empty(), 0, 20))
-            .thenReturn(new PageImpl<>(List.of(new StatTerm(term.getId(), term.getName(), term.getColor(), 1))));
+        when(statsHttpContract.findTermsByProject(
+            ontologyId,
+            userId,
+            Optional.empty(),
+            Optional.empty(),
+            Pageable.unpaged()
+        )).thenReturn(new PageImpl<>(List.of(new StatTerm(term.getId(), term.getName(), term.getColor(), 1))));
         results = statsService.statTermSlide(project, Optional.empty(), Optional.empty());
-        results.removeIf(x -> x.id() == 0);
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).id()).isEqualTo(term.getId());
-        assertThat(results.get(0).count()).isEqualTo(1L);
+        assertThat(results.getFirst().id()).isEqualTo(term.getId());
+        assertThat(results.getFirst().count()).isEqualTo(1L);
 
         Term term2 = builder.givenATerm(project.getOntology());
 
-        when(statsHttpContract.findTermsByProject(ontologyId, userId, Optional.empty(), Optional.empty(), 0, 20))
-            .thenReturn(new PageImpl<>(List.of(
-                new StatTerm(term.getId(), term.getName(), term.getColor(), 1),
-                new StatTerm(term2.getId(), term2.getName(), term2.getColor(), 0))));
+        when(statsHttpContract.findTermsByProject(
+            ontologyId,
+            userId,
+            Optional.empty(),
+            Optional.empty(),
+            Pageable.unpaged()
+        )).thenReturn(new PageImpl<>(List.of(
+            new StatTerm(term.getId(), term.getName(), term.getColor(), 1),
+            new StatTerm(term2.getId(), term2.getName(), term2.getColor(), 0)
+        )));
         results = statsService.statTermSlide(project, Optional.empty(), Optional.empty());
-        results.removeIf(x -> x.id() == 0);
         assertThat(results).hasSize(2);
 
         Optional<LocalDateTime> startDate = Optional.of(LocalDateTime.now().minusDays(42));
         Optional<LocalDateTime> endDate = Optional.of(LocalDateTime.now().minusDays(20));
-        when(statsHttpContract.findTermsByProject(ontologyId, userId, startDate, endDate, 0, 20))
-            .thenReturn(new PageImpl<>(List.of(
-                new StatTerm(term.getId(), term.getName(), term.getColor(), 0),
-                new StatTerm(term2.getId(), term2.getName(), term2.getColor(), 0))));
+        when(statsHttpContract.findTermsByProject(
+            ontologyId,
+            userId,
+            startDate,
+            endDate,
+            Pageable.unpaged()
+        )).thenReturn(new PageImpl<>(List.of(
+            new StatTerm(term.getId(), term.getName(), term.getColor(), 0),
+            new StatTerm(term2.getId(), term2.getName(), term2.getColor(), 0)
+        )));
         results = statsService.statTermSlide(project, startDate, endDate);
-        results.removeIf(x -> x.id() == 0);
         assertThat(results).hasSize(2);
         assertThat(results.get(0).count()).isEqualTo(0);
         assertThat(results.get(1).count()).isEqualTo(0);
     }
-
 
     @Test
     void statsTerm() {
         Project project = builder.givenAProject();
         long userId = builder.givenSuperAdmin().getId();
 
-        when(statsHttpContract.findTermsByProject(eq(project.getId()), eq(userId), eq(Optional.empty()),
-            eq(Optional.empty()), eq(0), eq(20)))
-            .thenReturn(new PageImpl<>(List.of()));
+        when(statsHttpContract.findTermsByProject(
+            eq(project.getId()),
+            eq(userId),
+            eq(Optional.empty()),
+            eq(Optional.empty()),
+            eq(Pageable.unpaged())
+        )).thenReturn(new PageImpl<>(List.of()));
         List<JsonObject> results = statsService.statTerm(project, null, null, false);
 
         assertThat(results).hasSize(0); //no term
@@ -334,45 +403,62 @@ public class StatsServiceTests {
         long termId = annotationTerm.getTerm().getId();
         Term term = annotationTerm.getTerm();
 
-        when(statsHttpContract.findTermsByProject(eq(project.getId()), eq(userId), eq(Optional.empty()),
-            eq(Optional.empty()), eq(0), eq(20)))
-            .thenReturn(new PageImpl<>(List.of(new StatTerm(termId, term.getName(), term.getColor(), 1))));
+        when(statsHttpContract.findTermsByProject(
+            eq(project.getId()),
+            eq(userId),
+            eq(Optional.empty()),
+            eq(Optional.empty()),
+            eq(Pageable.unpaged())
+        )).thenReturn(new PageImpl<>(List.of(new StatTerm(termId, term.getName(), term.getColor(), 1))));
         results = statsService.statTerm(project, null, null, false);
-        results.removeIf(x -> x.get("id") == null);
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).getId()).isEqualTo(annotationTerm.getTerm().getId());
-        assertThat(results.get(0).get("value")).isEqualTo(1L);
+        assertThat(results.getFirst().getId()).isEqualTo(annotationTerm.getTerm().getId());
+        assertThat(results.getFirst().get("value")).isEqualTo(1L);
 
         UserAnnotation annotation1 = builder.givenAUserAnnotation(project);
         annotation1.setCreated(DateUtils.addDays(new Date(), -1));
         builder.givenAnAnnotationTerm(annotation1, annotationTerm.getTerm());
         builder.persistAndReturn(annotation1);
 
-        when(statsHttpContract.findTermsByProject(eq(project.getId()), eq(userId), eq(Optional.empty()),
-            eq(Optional.empty()), eq(0), eq(20)))
-            .thenReturn(new PageImpl<>(List.of(new StatTerm(termId, term.getName(), term.getColor(), 2))));
+        when(statsHttpContract.findTermsByProject(
+            eq(project.getId()),
+            eq(userId),
+            eq(Optional.empty()),
+            eq(Optional.empty()),
+            eq(Pageable.unpaged())
+        )).thenReturn(new PageImpl<>(List.of(new StatTerm(termId, term.getName(), term.getColor(), 2))));
         results = statsService.statTerm(project, null, null, false);
-        results.removeIf(x -> x.get("id") == null);
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).getId()).isEqualTo(annotationTerm.getTerm().getId());
-        assertThat(results.get(0).get("value")).isEqualTo(2L);
+        assertThat(results.getFirst().getId()).isEqualTo(annotationTerm.getTerm().getId());
+        assertThat(results.getFirst().get("value")).isEqualTo(2L);
 
-        when(statsHttpContract.findTermsByProject(eq(project.getId()), eq(userId), any(), any(), eq(0), eq(20)))
-            .thenReturn(new PageImpl<>(List.of(new StatTerm(termId, term.getName(), term.getColor(), 0))));
-        results = statsService.statTerm(project, DateUtils.addDays(new Date(), -40), DateUtils.addDays(new Date(), -20),
-            false);
-        results.removeIf(x -> x.get("id") == null);
+        when(statsHttpContract.findTermsByProject(
+            eq(project.getId()),
+            eq(userId),
+            any(),
+            any(),
+            eq(Pageable.unpaged())
+        )).thenReturn(new PageImpl<>(List.of(new StatTerm(termId, term.getName(), term.getColor(), 0))));
+        results = statsService.statTerm(
+            project,
+            DateUtils.addDays(new Date(), -40),
+            DateUtils.addDays(new Date(), -20),
+            false
+        );
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).get("value")).isEqualTo(0L);
+        assertThat(results.getFirst().get("value")).isEqualTo(0L);
     }
 
     @Test
     void statPerTermAndImage() {
         Project project = builder.givenAProject();
 
-        when(statsHttpContract.findPerTermAndImageByProject(eq(project.getId()), eq(Optional.empty()),
-            eq(Optional.empty()), eq(0), eq(20)))
-            .thenReturn(new PageImpl<>(List.of()));
+        when(statsHttpContract.findPerTermAndImageByProject(
+            eq(project.getId()),
+            eq(Optional.empty()),
+            eq(Optional.empty()),
+            eq(Pageable.unpaged())
+        )).thenReturn(new PageImpl<>(List.of()));
         List<StatPerTermAndImage> results = statsService.statPerTermAndImage(project, null, null);
 
         assertThat(results).hasSize(0); //no annotations
@@ -382,37 +468,50 @@ public class StatsServiceTests {
         long termId = annotationTerm.getTerm().getId();
         long imageId = annotationTerm.getUserAnnotation().getImage().getId();
 
-        when(statsHttpContract.findPerTermAndImageByProject(eq(project.getId()), eq(Optional.empty()),
-            eq(Optional.empty()), eq(0), eq(20)))
-            .thenReturn(new PageImpl<>(List.of(new StatPerTermAndImage(imageId, termId, 1L))));
+        when(statsHttpContract.findPerTermAndImageByProject(
+            eq(project.getId()),
+            eq(Optional.empty()),
+            eq(Optional.empty()),
+            eq(Pageable.unpaged())
+        )).thenReturn(new PageImpl<>(List.of(new StatPerTermAndImage(imageId, termId, 1L))));
         results = statsService.statPerTermAndImage(project, null, null);
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).termId()).isEqualTo(annotationTerm.getTerm().getId());
-        assertThat(results.get(0).imageId()).isEqualTo(annotationTerm.getUserAnnotation().getImage().getId());
-        assertThat(results.get(0).countAnnotations()).isEqualTo(1L);
+        assertThat(results.getFirst().termId()).isEqualTo(annotationTerm.getTerm().getId());
+        assertThat(results.getFirst().imageId()).isEqualTo(annotationTerm.getUserAnnotation().getImage().getId());
+        assertThat(results.getFirst().countAnnotations()).isEqualTo(1L);
 
-        AnnotationTerm annotationTermWithSameImageAndSameTerm =
-            builder.givenAnAnnotationTerm(builder.givenAUserAnnotation(project));
+        AnnotationTerm annotationTermWithSameImageAndSameTerm = builder.givenAnAnnotationTerm(
+            builder.givenAUserAnnotation(project)
+        );
         annotationTermWithSameImageAndSameTerm.getUserAnnotation()
             .setImage(annotationTerm.getUserAnnotation().getImage());
         annotationTermWithSameImageAndSameTerm.setTerm(annotationTerm.getTerm());
 
-        when(statsHttpContract.findPerTermAndImageByProject(eq(project.getId()), eq(Optional.empty()),
-            eq(Optional.empty()), eq(0), eq(20)))
-            .thenReturn(new PageImpl<>(List.of(new StatPerTermAndImage(imageId, termId, 2L))));
+        when(statsHttpContract.findPerTermAndImageByProject(
+            eq(project.getId()),
+            eq(Optional.empty()),
+            eq(Optional.empty()),
+            eq(Pageable.unpaged())
+        )).thenReturn(new PageImpl<>(List.of(new StatPerTermAndImage(imageId, termId, 2L))));
         results = statsService.statPerTermAndImage(project, null, null);
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).termId()).isEqualTo(annotationTerm.getTerm().getId());
-        assertThat(results.get(0).imageId()).isEqualTo(annotationTerm.getUserAnnotation().getImage().getId());
-        assertThat(results.get(0).countAnnotations()).isEqualTo(2L);
+        assertThat(results.getFirst().termId()).isEqualTo(annotationTerm.getTerm().getId());
+        assertThat(results.getFirst().imageId()).isEqualTo(annotationTerm.getUserAnnotation().getImage().getId());
+        assertThat(results.getFirst().countAnnotations()).isEqualTo(2L);
 
-        when(statsHttpContract.findPerTermAndImageByProject(eq(project.getId()), any(), any(), eq(0), eq(20)))
-            .thenReturn(new PageImpl<>(List.of()));
-        results = statsService.statPerTermAndImage(project, DateUtils.addDays(new Date(), -40),
-            DateUtils.addDays(new Date(), -20));
+        when(statsHttpContract.findPerTermAndImageByProject(
+            eq(project.getId()),
+            any(),
+            any(),
+            eq(Pageable.unpaged())
+        )).thenReturn(new PageImpl<>(List.of()));
+        results = statsService.statPerTermAndImage(
+            project,
+            DateUtils.addDays(new Date(), -40),
+            DateUtils.addDays(new Date(), -20)
+        );
         assertThat(results).hasSize(0);
     }
-
 
     @Test
     void statsUserAnnotation() {
@@ -425,29 +524,32 @@ public class StatsServiceTests {
         entityManager.refresh(annotation1);
         UserAnnotation annotation2 = builder.givenAUserAnnotation(project);
         annotation2.setCreated(DateUtils.addDays(new Date(), -1));
-        builder.givenAnAnnotationTerm(annotation2, annotation1.getTerms().get(0));
+        builder.givenAnAnnotationTerm(annotation2, annotation1.getTerms().getFirst());
         builder.persistAndReturn(annotation2);
         entityManager.refresh(annotation2);
 
-        Term term = annotation1.getTerms().get(0);
+        Term term = annotation1.getTerms().getFirst();
         User superAdmin = builder.givenSuperAdmin();
-        when(statsHttpContract.findUserTermsByProject(project.getId(), superAdmin.getId(), 0, 20))
-            .thenReturn(new PageImpl<>(List.of(
-                new FlatStatUserTerm(superAdmin.getId(), superAdmin.getUsername(),
-                    new StatTerm(term.getId(), term.getName(), term.getColor(), 2))
-            )));
+        when(statsHttpContract.findUserTermsByProject(
+            project.getId(),
+            superAdmin.getId(),
+            Pageable.unpaged()
+        )).thenReturn(new PageImpl<>(List.of(new FlatStatUserTerm(
+            superAdmin.getId(),
+            superAdmin.getUsername(),
+            new StatTerm(term.getId(), term.getName(), term.getColor(), 2)
+        ))));
 
         Set<StatTerm> terms;
 
         List<StatUserTerm> results = statsService.statUserAnnotations(project);
 
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).userId()).isEqualTo(builder.givenSuperAdmin().getId());
-        terms = results.get(0).terms();
+        assertThat(results.getFirst().userId()).isEqualTo(builder.givenSuperAdmin().getId());
+        terms = results.getFirst().terms();
         assertThat(terms).hasSize(1);
         assertThat(terms.stream().findFirst().get().count()).isEqualTo(2);
     }
-
 
     @Test
     void statsUser() {
@@ -464,8 +566,8 @@ public class StatsServiceTests {
         List<JsonObject> results = statsService.statUser(project, null, null);
 
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).getId()).isEqualTo(builder.givenSuperAdmin().getId());
-        assertThat(results.get(0).getJSONAttrLong("value")).isEqualTo(2);
+        assertThat(results.getFirst().getId()).isEqualTo(builder.givenSuperAdmin().getId());
+        assertThat(results.getFirst().getJSONAttrLong("value")).isEqualTo(2);
     }
 
     @Test
@@ -499,9 +601,13 @@ public class StatsServiceTests {
         givenAPersistentConnectionInProject(builder.givenSuperAdmin(), project, DateUtils.addDays(new Date(), -15));
         givenAPersistentConnectionInProject(builder.givenSuperAdmin(), project, DateUtils.addDays(new Date(), -5));
 
-
-        List<JsonObject> jsonObjects =
-            statsService.statConnectionsEvolution(project, 7, DateUtils.addDays(new Date(), -18), null, false);
+        List<JsonObject> jsonObjects = statsService.statConnectionsEvolution(
+            project,
+            7,
+            DateUtils.addDays(new Date(), -18),
+            null,
+            false
+        );
         assertThat(jsonObjects).hasSize(3);
         assertThat(jsonObjects.get(0).getJSONAttrLong("size")).isEqualTo(2);
         assertThat(jsonObjects.get(1).getJSONAttrLong("size")).isEqualTo(1);
@@ -513,11 +619,14 @@ public class StatsServiceTests {
         assertThat(jsonObjects.get(1).getJSONAttrLong("size")).isEqualTo(3);
         assertThat(jsonObjects.get(2).getJSONAttrLong("size")).isEqualTo(3);
 
-
-        jsonObjects = statsService.statConnectionsEvolution(project, 7, DateUtils.addDays(new Date(), -18),
-            DateUtils.addDays(new Date(), -6), true);
+        jsonObjects = statsService.statConnectionsEvolution(
+            project,
+            7,
+            DateUtils.addDays(new Date(), -18),
+            DateUtils.addDays(new Date(), -6),
+            true
+        );
         assertThat(jsonObjects).hasSize(2);
-
     }
 
     @Test
@@ -528,16 +637,25 @@ public class StatsServiceTests {
         givenAPersistentImageConsultation(builder.givenSuperAdmin(), imageInstance, DateUtils.addDays(new Date(), -15));
         givenAPersistentImageConsultation(builder.givenSuperAdmin(), imageInstance, DateUtils.addDays(new Date(), -5));
 
-
-        List<JsonObject> jsonObjects =
-            statsService.statImageConsultationsEvolution(project, 7, DateUtils.addDays(new Date(), -18), null, false);
+        List<JsonObject> jsonObjects = statsService.statImageConsultationsEvolution(
+            project,
+            7,
+            DateUtils.addDays(new Date(), -18),
+            null,
+            false
+        );
         assertThat(jsonObjects).hasSize(3);
         assertThat(jsonObjects.get(0).getJSONAttrLong("size")).isEqualTo(2);
         assertThat(jsonObjects.get(1).getJSONAttrLong("size")).isEqualTo(1);
         assertThat(jsonObjects.get(2).getJSONAttrLong("size")).isEqualTo(0);
 
-        jsonObjects =
-            statsService.statImageConsultationsEvolution(project, 7, DateUtils.addDays(new Date(), -18), null, true);
+        jsonObjects = statsService.statImageConsultationsEvolution(
+            project,
+            7,
+            DateUtils.addDays(new Date(), -18),
+            null,
+            true
+        );
         assertThat(jsonObjects).hasSize(3);
         assertThat(jsonObjects.get(0).getJSONAttrLong("size")).isEqualTo(2);
         assertThat(jsonObjects.get(1).getJSONAttrLong("size")).isEqualTo(3);
@@ -548,26 +666,52 @@ public class StatsServiceTests {
     void shouldReturnAnnotationActionEvolutionStatsOverTime() {
         Project project = builder.givenAProject();
         AnnotationDomain annotation = builder.givenAUserAnnotation(project);
-        givenAPersistentAnnotationAction(DateUtils.addDays(new Date(), -15), annotation, builder.givenSuperAdmin(),
-            "select");
-        givenAPersistentAnnotationAction(DateUtils.addDays(new Date(), -15), annotation, builder.givenSuperAdmin(),
-            "move");
-        givenAPersistentAnnotationAction(DateUtils.addDays(new Date(), -15), annotation, builder.givenSuperAdmin(),
-            "select");
-        givenAPersistentAnnotationAction(DateUtils.addDays(new Date(), -5), annotation, builder.givenSuperAdmin(),
-            "select");
+        givenAPersistentAnnotationAction(
+            DateUtils.addDays(new Date(), -15),
+            annotation,
+            builder.givenSuperAdmin(),
+            "select"
+        );
+        givenAPersistentAnnotationAction(
+            DateUtils.addDays(new Date(), -15),
+            annotation,
+            builder.givenSuperAdmin(),
+            "move"
+        );
+        givenAPersistentAnnotationAction(
+            DateUtils.addDays(new Date(), -15),
+            annotation,
+            builder.givenSuperAdmin(),
+            "select"
+        );
+        givenAPersistentAnnotationAction(
+            DateUtils.addDays(new Date(), -5),
+            annotation,
+            builder.givenSuperAdmin(),
+            "select"
+        );
 
-        List<JsonObject> jsonObjects =
-            statsService.statAnnotationActionsEvolution(project, 7, DateUtils.addDays(new Date(), -18), null, false,
-                "select");
+        List<JsonObject> jsonObjects = statsService.statAnnotationActionsEvolution(
+            project,
+            7,
+            DateUtils.addDays(new Date(), -18),
+            null,
+            false,
+            "select"
+        );
         assertThat(jsonObjects).hasSize(3);
         assertThat(jsonObjects.get(0).getJSONAttrLong("size")).isEqualTo(2);
         assertThat(jsonObjects.get(1).getJSONAttrLong("size")).isEqualTo(1);
         assertThat(jsonObjects.get(2).getJSONAttrLong("size")).isEqualTo(0);
 
-        jsonObjects =
-            statsService.statAnnotationActionsEvolution(project, 7, DateUtils.addDays(new Date(), -18), null, true,
-                "select");
+        jsonObjects = statsService.statAnnotationActionsEvolution(
+            project,
+            7,
+            DateUtils.addDays(new Date(), -18),
+            null,
+            true,
+            "select"
+        );
         assertThat(jsonObjects).hasSize(3);
         assertThat(jsonObjects.get(0).getJSONAttrLong("size")).isEqualTo(2);
         assertThat(jsonObjects.get(1).getJSONAttrLong("size")).isEqualTo(3);
